# codex-session-cleaner

./: .gitignore  README.md  pyproject.toml
docs/: DESIGN.md
tests/: test_patcher.py
